# DenMatDynm

./: Makefile  README.txt  make-FeynWann-Kairay.sh  make.inc
Examples/: Silicene_Real-Time.tgz  Silicon_T1.tgz
Examples/RealTime_Example_GaAs_20230105/: Phonon3DLOTO.py  README  bandstruct.in  collect.sh  jdftx.sh  plot_phonon.gnu  scf-ph.in  scf.in  scf.out  test.py  totalE.phononCellWeights
Examples/RealTime_Example_GaAs_20230105/Wannier/: totalE-ph.in  totalE.Vscloc  totalE.phononBasis
Examples/RealTime_Example_GaAs_20230105/ld-Shankar/Wannier/: bandstruct.eigenvals  jdftx-wann.sh
Examples/RealTime_Example_GaAs_20230105/ld-Shankar/t300/: README  jdftx-ld-init.sh  lindbladInit.in  lindbladInit.out  slurm-87739.out
Examples/RealTime_Example_GaAs_20230105/ld-Shankar/t300/Wannier/: bandstruct.out  totalE.Zeff
Examples/RealTime_Example_GaAs_20230105/ld-Shankar/t300/rt-linear/: extract_spin.sh  jdftx-ld.sh  lindbladLinear.in  lindbladLinear.out_1  lindbladLinear.out_2  lindbladLinear.out_merge  sfit.out
Examples/RealTime_Example_GaAs_20230105/ld-Shankar/t300/spectrum/: analyzeLdbdSpectrum.out  lindbladLinear.in  lindbladLinear.out  slurm-87742.out
Examples/RealTime_Example_GaAs_20230105/ld-dmd/: README
Examples/RealTime_Example_GaAs_20230105/ld-dmd/Wannier/: common.in  rand_wann-centers.py  totalE.out
Examples/RealTime_Example_GaAs_20230105/ld-dmd/t30/Wannier/: bandstruct.kpoints  bandstruct.plot_zoom  de.py  totalE.Vtau  totalE.eigStats  totalE.eigenvals  totalE.phononCellMap  totalE.phononOmegaSq
Examples/RealTime_Example_GaAs_20230105/ld-dmd/t30/mult22_gauss2e-3/: lindbladInit.in  lindbladInit.out  slurm-84655.out
Examples/RealTime_Example_GaAs_20230105/ld-dmd/t30/mult22_gauss2e-3/Wannier/: totalE.epsInf  totalE.phononKpts  totalE.sym  wannier.in0
Examples/RealTime_Example_GaAs_20230105/ld-dmd/t30/mult22_gauss2e-3/dBz/eph-ei-ee/ldbd_data/: ldbd_bsq.out  ldbd_imsigkn.out
Examples/RealTime_Example_GaAs_20230105/ld-dmd/t30/mult22_gauss2e-3/dBz/eph-ei-ee/n2e16_ni2e16/: dos_elec.out  fn_elec_tot.out  fn_initial_elec.out  ldbd_imsige_ee_Pee_update_byDMD.out  ldbd_imsige_ei_D0model_ionized_byDMD.out  out  (+9 more)
Examples/RealTime_Example_GaAs_20230105/ld-dmd/t30/mult22_gauss2e-3/dBz/ldbd_data/: ldbd_imsigkn_bsq.out  ldbd_imsigkn_flip.out
Examples/RealTime_Example_GaAs_20230105/ld-dmd/t300/Wannier/: totalE.in  wannier.eigenvals  wannier.in
Examples/RealTime_Example_GaAs_20230105/ld-dmd/t300/mult8_gauss0.005/: jdftx-ld-init.sh  lindbladInit.in  lindbladInit.out  slurm-84278.out
Examples/RealTime_Example_GaAs_20230105/ld-dmd/t300/mult8_gauss0.005/Wannier/: phonon.out  wannier.out
Examples/RealTime_Example_GaAs_20230105/ld-dmd/t300/mult8_gauss0.005/ldbd_data/: ldbd_imsigkn.out
Examples/RealTime_Example_GaAs_20230105/ld-dmd/t300/mult8_gauss0.005/pump-coh/ldbd_data/: ldbd_imsigkn_bsq.out
Examples/RealTime_Example_GaAs_20230105/work_phonon/: jdftx-ph.sh  jdftx.sh  phonon-scf.1.out  phonon-scf.2.out  phonon-scf.3.out  phonon-scf.4.out  phonon-scf.in  phonon.1.out  phonon.2.out  phonon.3.out  phonon.4.out  scf-ph.in  split.out  totalE-ph.in  totalE.Vscloc  totalE.Vtau  totalE.eigStats  totalE.eigenvals  totalE.in  totalE.out
src_FeynWann_forDMD/: BlockCyclicMatrix.cpp  BlockCyclicMatrix.h  CMakeLists.txt  DistributedMatrix.cpp  DistributedMatrix.h  FeynWann.cpp  FeynWann.h  FeynWann.kdev4  FeynWann_JX_routines.cpp  FeynWann_defect.cpp  FeynWann_elec.cpp  FeynWann_internal.h  FeynWann_phonon.cpp  FeynWann_util.cpp  Histogram.cpp  Histogram.h  ImEps.cpp  ImEpsNonTherm.cpp  InputMap.cpp  InputMap.h  Integrator.h  Interp1.cpp  Interp1.h  Makefile  SparseMatrix.h  ballisticConductance.cpp  circularDichroism.cpp  config.in.h  debugE.cpp  debugEph.cpp  ePhRelax.cpp  ePhSpinRelax.cpp  eePhScatter.py  electronDOS.cpp  electronDefectLinewidth.cpp  electronPhononCoupling.cpp  electronPhononLinewidth.cpp  kramersKronig  phononDOS.cpp  phononElectronLinewidth.cpp  (+3 more)
src_FeynWann_forDMD/CMake-Modules/: FindPETSc.cmake  FindSLEPc.cmake
src_FeynWann_forDMD/lindblad/: CMakeLists.txt  Lindblad.cpp  Lindblad.h  LindbladDynamics.cpp  LindbladFile.h  LindbladLinear.cpp  LindbladMatrix.cpp  LindbladNonlinear.cpp  LindbladSpectrum.cpp  Makefile  analyzeSpectrum.py  cmake_install.cmake  init  init.cpp  makeModel  makeModel.cpp  run.cpp
src_FeynWann_forDMD/lindblad/spin_echo/: .gitignore  lindblad.in  model.in  plotSpinVsTime.py
src_FeynWann_forDMD/lindbladInit_for-DMD-4.5.6/: CMakeLists.txt  ElectronImpurity.h  ElectronPhonon.h  ElectronPhonon_ana.cpp  common_headers.h  electron.h  electron_ana.cpp  electron_k_select.cpp  electron_save.cpp  help.cpp  help.h  help_electron.cpp  help_electron.h  init.cpp  lattice.h  parameters.cpp  parameters.h  phonon.h  sparse_matrix.cpp  sparse_matrix.h
src_FeynWann_forDMD/scalapack/: PDHSEQRm.f  PDLAQR0m.f  PDLAQR1m.f
src_v4.5.7/: DenMat.cpp  DenMat.h  DensityMatrix_Dynamics.h  ElecLight.cpp  ElecLight.h  ElectronImpurity.cpp  ElectronImpurity.h  ElectronPhonon.cpp  ElectronPhonon.h  ElectronPhonon_ana.cpp  ElectronPhonon_linear.cpp  PumpProbe.h  Scatt_Param.cpp  Scatt_Param.h  common_headers.h  electron.cpp  electron.h  electron_DP.cpp  electron_ana.cpp  evolve_eph.cpp  evolve_eph_linear.cpp  lattice.h  main.cpp  observable.h  parameters.cpp  parameters.h  phonon.h
src_v4.5.7/comm/: GaussianSmapling.h  Histogram.h  ODE.h  Random.cpp  Random.h  Units.h  constants.h  kmap.cpp  kmap.h  matrix3.h  myarray.cpp  myarray.h  myio.cpp  myio.h  mymatrix.cpp  mymatrix.h  mymp.cpp  mymp.h  scalar.h  sparse2D.h  sparse_matrix.cpp  sparse_matrix.h  vector3.h
src_v4.5.7/material_model/: GaAs_model.h  MoS2_model.h  material_model.h
src_v4.5.7/material_model/GaAs/: GaAs_ElectronPhonon.cpp  GaAs_ElectronPhonon.h  GaAs_electron.cpp  GaAs_electron.h  GaAs_lattice.h  GaAs_phonon.h
src_v4.5.7/material_model/MoS2/: MoS2_ElectronPhonon.cpp  MoS2_ElectronPhonon.h  MoS2_electron.cpp  MoS2_electron.h  MoS2_lattice.h  MoS2_phonon.h
src_v4.5.7/scattering_model/: Coulomb_Model.h  ElecElec_Model.h  ElecElec_Model_linear.cpp  ElecImp_Model.h  phenomenon_relax.h
(+111 files in other folders)
